Tweaks to package.json

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "angular2-test1",
   "version": "0.0.0",
-  "description": "First play with Angular 2",
+  "description": "First play with Angular 2 / TypeScript in Visual Studio Code",
   "main": "gulpfile.js",
   "dependencies": {
     "angular2": "^2.0.0-beta.3",
     "es6-promise": "^3.0.2",
-    "del": "^2.2.0",
-    "gulp-typescript": "^2.10.0",
-    "gulp": "^3.9.0",
-    "express": "^4.13.4",
     "rxjs": "^5.0.0-beta.0",
     "es6-shim": "^0.33.13",
     "reflect-metadata": "^0.1.2",
     "zone.js": "^0.5.11",
-    "systemjs": "^0.19.20"
+    "systemjs": "^0.19.20",
+    "express": "^4.13.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+      "del": "^2.2.0",
+      "gulp-typescript": "^2.10.0",
+      "gulp": "^3.9.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
